# src/controllers/divisistController.ts
@@ -1,4 +1,4 @@
-import { Get, Route } from "tsoa";
+import { Get, Query, Route } from "tsoa";
 import { DivisistService } from "../services/divisistService";
 
 
@@ -8,7 +8,7 @@ export default class DivisistController {
     private divisistService: DivisistService = new DivisistService();
 
     @Get("/test")
-    public async test(): Promise<any> {
-        return await this.divisistService.test();
+    public async test(@Query() ci_session: string): Promise<any> {
+        return await this.divisistService.test(ci_session);
     }
 }
